# xenon-lfp-analysis

./: LICENSE  README.md  requirements.txt
code-files/: HD-MEA-DownSample-BATCH.py  HD-MEA-DownSample.py  Xenon-LFP-Analysis.py  requirements.txt
code-files/3Brain-processing/: ExportToHDF5-ExtractDownsample.py  HD-MEA-DownSample.py
code-files/3Brian-processing/: ExportToHDF5-ChannelSelection.py  ExportToHDF5-ExtractDownsample.py  Xenon-LFP-Analysis.py  requirements.txt
code-files/utah-array-processing/: utah-array-conversion.py
docs/: Xenon_LFP_Analysis.readthedocs.yaml
docs/source/: Code.rst  Installation.rst  Preprocessing.rst  Tutorial.rst  Xenon_LFP_Analysis.readthedocs.yaml  conf.py  index.rst  requirements.txt
installation-setup/: 00-Python-Setup-Instruction.docx  01-Export-Channel-Groups-Instruction.docx  02-Down-Sample-Instruction.docx  03-Xenon-LFP-Analysis-Startup-Instruction.docx
sample-data/: 01-sample-data  01-sample-data-link  01-sample-data.md
tutorial-videos/word-docs/: 01-MEA-Viewer-Functions.docx  02-MEA-Channel-Group-Functions.docx  03-Seizure-like-Activity-Functions.docx
xenon_lfp_analysis/: LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.cfg
xenon_lfp_analysis/xenon_lfp_analysis/: convert_utaharray.py  downsample_brw.py  run_lfp_analysis.py
xenon_lfp_analysis/xenon_lfp_analysis/app/: app.py  app.wsgi
