[build-system]
requires = [
    "setuptools>=54",
    "wheel"
]
build-backend = "setuptools.build_meta"

[project]
name = "xenon_lfp_analysis"
authors = [
    {name = "Arjun Mahadevan", email = "amahadevan@xenon-pharma.com"},
]
readme = "README.md"
requires-python = ">=3.7"
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version", "description"]

dependencies = [
    "pyaedt==0.4.7",
    "Django==3.2.8",
    "Brotli==1.0.9",
    "click==8.0.4",
    "colorama==0.4.4",
    "dash==2.2.0",
    "dash-core-components==2.0.0",
    "dash-daq==0.5.0",
    "dash-html-components==2.0.0",
    "dash-table==5.0.0",
    "Flask==2.0.3",
    "flask_caching",
    "Flask-Compress==1.11",
    "h5py==3.6.0",
    "imageio==2.16.1",
    "itsdangerous==2.1.1",
    "Jinja2==3.0.3",
    "MarkupSafe==2.1.0",
    "networkx",
    "numpy",
    "packaging==21.3",
    "pandas",
    "Pillow==9.0.1",
    "plotly==5.6.0",
    "pyparsing==3.0.7",
    "python-dateutil==2.8.2",
    "pytz==2021.3",
    "PyWavelets==1.3.0",
    "scikit-image==0.19.2",
    "scipy",
    "six==1.16.0",
    "tenacity==8.0.1",
    "Werkzeug==2.0.3",
    "tqdm==2.2.3",
    "kaleido==0.2.1",
]
