[metadata]
name = xenon_lfp_analysis
version = 0.0.3
author = Arjun Mahadevan
description = Xenon LFP Analysis Platform
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/MicroBrew09/xenon-lfp-analysis.git
classifiers = 
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
zip_safe = true
packages = find:
python_requires = >= 3.0

[options.extras_require]
all = Brotli; click; colorama; dash; dash-core-components; dash-daq; dash-html-components; dash-table; Flask; Flask-Compress; h5py; imageio; itsdangerous; Jinja2; MarkupSafe; networkx; numpy; packaging; pandas; Pillow; plotly; pyparsing; python-dateutil; pytz; PyWavelets; scikit-image; scipy; six; tenacity; tifffile; Werkzeug; tqdm; kaleido

[options.entry_points]
console_scripts=
    run_lfp_analysis = xenon_lfp_analysis.run_lfp_analysis:main
    downsample_brw = xenon_lfp_analysis.downsample_brw:run
    convert_utaharray = xenon_lfp_analysis.convert_utaharray:run